# IntroductoryTask

./: CMakeLists.txt
res/: out.txt  sample.html  template.txt
src/: Application.cpp  FunctionsRegister.cpp  FunctionsRegister.h  Logger.cpp  Logger.h  MyException.cpp  MyException.h  Parser.cpp  Parser.h
src/Entities/: Parameter.h
src/Networking/: ClientSocket.cpp  ClientSocket.h  ListenSocket.cpp  ListenSocket.h  networkingManager.cpp  networkingManager.h
src/Services/: FunctionsRegisterService.cpp  FunctionsRegisterService.h
src/Tools/: Logger.cpp  MyException.h  Parser.cpp  Parser.h
src/networking/: networkingManager.cpp  networkingManager.h
